Fix for footer overlapping the form content

--- a/app/assets/stylesheets/components/_aside-widget.scss
+++ b/app/assets/stylesheets/components/_aside-widget.scss
@@ -1,4 +1,5 @@
 .aside-widget {
+  @include clearfix();
   text-align: center;
   margin: $bs2 auto;
 
