--- a/app/assets/stylesheets/config/_base.scss
+++ b/app/assets/stylesheets/config/_base.scss
@@ -9,6 +9,7 @@ html {
 body {
   position: relative;
   min-height: 100%;
+  padding-bottom: $footer-height;
   font-family: 'Lato', Helvetica, Arial, sans-serif;
   line-height: 1.5;
   overflow-x: hidden;
