--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -31,4 +31,5 @@ $grey-default: #999;
 
 // Misc
 
+$footer-height: $bs3;
 $event-url-prefix-w:  $bs4;
